ctrl+shift+B to build in VS Code

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -129,7 +129,10 @@
             "dependsOn": [
                 "simulator (dev): make pdx"
             ],
-            "group": "build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
             "presentation": {
                 "reveal": "always",
             }
